tests/fixtures/invalid/pow_bytes_bytes_list.py
# Cannot call pow() with Bytes, Bytes, List[int]
x = pow(b"hello", b"hello", [1, 2, 3])
